adding features for fs-1297
